--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,14 @@
 name = "asyn-retry-policy"
 version = "0.1.0"
 edition = "2024"
+description = "Async retry helpers with exponential backoff, jitter, and an ergonomic #[retry] attribute macro."
+homepage = "https://github.com/YOUR_GITHUB_USER/asyn-retry-policy"
+repository = "https://github.com/YOUR_GITHUB_USER/asyn-retry-policy"
+documentation = "https://docs.rs/asyn-retry-policy"
+keywords = ["retry", "backoff", "jitter", "async", "tokio", "procedural-macro"]
+categories = ["asynchronous", "network-programming", "development-tools"]
+license = "MIT"
+authors = ["Mohtashim Nawaz"]
 
 [dependencies]
 # Async runtime
@@ -16,4 +24,4 @@ rand = { version = "0.8", features = ["small_rng"] }
 thiserror = "1.0"
 
 # Proc-macro crate providing the `#[retry]` attribute
-asyn-retry-policy-macro = { path = "asyn-retry-policy-macro" }
+asyn-retry-policy-macro = "0.1.0"
