add badges and publishing instructions to README, finalize CHANGELOG with a dated release entry (2025-12-31), and add license-file to both crates' Cargo.toml; I will then create a local git tag v0.1.0 (won't push) and run tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ documentation = "https://docs.rs/asyn-retry-policy"
 keywords = ["retry", "backoff", "jitter", "async", "tokio", "procedural-macro"]
 categories = ["asynchronous", "network-programming", "development-tools"]
 license = "MIT"
+license-file = "LICENSE"
 authors = ["Mohtashim Nawaz"]
 
 [dependencies]
@@ -24,4 +25,4 @@ rand = { version = "0.8", features = ["small_rng"] }
 thiserror = "1.0"
 
 # Proc-macro crate providing the `#[retry]` attribute
-asyn-retry-policy-macro = "0.1.0"
+asyn-retry-policy-macro = { path = "asyn-retry-policy-macro" }
