--- a/asyn-retry-policy-macro/Cargo.toml
+++ b/asyn-retry-policy-macro/Cargo.toml
@@ -7,6 +7,7 @@ homepage = "https://github.com/YOUR_GITHUB_USER/asyn-retry-policy"
 repository = "https://github.com/YOUR_GITHUB_USER/asyn-retry-policy"
 documentation = "https://docs.rs/asyn-retry-policy-macro"
 license = "MIT"
+license-file = "LICENSE"
 authors = ["Your Name <you@example.com>"]
 
 [lib]
