chore(metadata): reduce keywords to meet crates.io limit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "Async retry helpers with exponential backoff, jitter, and an ergo
 homepage = "https://github.com/YOUR_GITHUB_USER/asyn-retry-policy"
 repository = "https://github.com/YOUR_GITHUB_USER/asyn-retry-policy"
 documentation = "https://docs.rs/asyn-retry-policy"
-keywords = ["retry", "backoff", "jitter", "async", "tokio", "procedural-macro"]
+keywords = ["retry", "backoff", "jitter", "async", "tokio"]
 categories = ["asynchronous", "network-programming", "development-tools"]
 license = "MIT"
 license-file = "LICENSE"
